--- a/website/pages/docs/llm/application.mdx
+++ b/website/pages/docs/llm/application.mdx
@@ -1,4 +1,4 @@
-import { Callout, Tabs, Tab } from 'nextra-theme-docs'
+import { Callout, Tabs } from 'nextra/components'
 
 ## `application()` function
 <Tabs items={[
@@ -8,7 +8,7 @@ import { Callout, Tabs, Tab } from 'nextra-theme-docs'
     <code>ILlmSchema</code>,
     <code>ILlmApplicationOfValidate</code>,
   ]}>
-  <Tab>
+  <Tabs.Tab>
 ```typescript filename="typia" showLineNumbers {2-18}
 export namespace llm {
   // LLM FUNCTION CALLING APPLICATION SCHEMA
@@ -51,8 +51,8 @@ export namespace llm {
   ): ILlmSchema.ModelSchema[Model];
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```typescript filename="@samchon/openapi" showLineNumbers
 import { IGeminiSchema } from "./IGeminiSchema";
 import { ILlmFunction } from "./ILlmFunction";
@@ -136,8 +136,8 @@ export namespace ILlmApplication {
   } & ILlmSchema.ModelConfig[Model];
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```typescript filename="@samchon/openapi" showLineNumbers
 import { ILlmSchema } from "./ILlmSchema";
 
@@ -242,8 +242,8 @@ export namespace ILlmFunction {
   }
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```typescript filename="@samchon/openapi" showLineNumbers
 import { IChatGptSchema } from "./IChatGptSchema";
 import { IClaudeSchema } from "./IClaudeSchema";
@@ -315,8 +315,8 @@ export namespace ILlmSchema {
     ILlmSchema.ModelConfig[Model];
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```typescript filename="typia" showLineNumbers
 import { ILlmApplication, ILlmFunction, ILlmSchema } from "@samchon/openapi";
 
@@ -410,7 +410,7 @@ export namespace ILlmFunctionOfValidate {
   export import ISeparated = ILlmFunction.ISeparated;
 }
 ```
-  </Tab>
+  </Tabs.Tab>
 </Tabs>
 
 LLM function calling application schema from a native TypeScript class or interface type.
@@ -453,7 +453,7 @@ Structured output is another feature of LLM. The "structured output" means that 
     "TypeScript Source Code",
     "Compiled JavaScript File",
   ]}>
-  <Tab>
+  <Tabs.Tab>
 ```typescript filename="example/src/llm.application.simple.ts" showLineNumbers {4}
 import { ILlmApplication } from "@samchon/openapi";
 import typia, { tags } from "typia";
@@ -576,8 +576,8 @@ namespace IBbsArticle {
   export type IUpdate = Partial<ICreate>;
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```javascript filename="example/bin/llm.application.simple.js" showLineNumbers
 import typia from "typia";
 
@@ -699,7 +699,7 @@ const app = {
 };
 console.log(app);
 ```
-  </Tab>
+  </Tabs.Tab>
 </Tabs>
 
 Here is the example code utilizing the `typia.llm.application<App, Model>()` function.
@@ -726,7 +726,7 @@ Here is the example separating the parameter schemas.
     "TypeScript Source Code",
     "LLM Function Calling Application Schema",
   ]}>
-  <Tab>
+  <Tabs.Tab>
 ```typescript filename="example/src/llm.application.separate.ts" showLineNumbers {4-7}
 import { ILlmApplication } from "@samchon/openapi";
 import typia, { tags } from "typia";
@@ -792,8 +792,8 @@ interface BbsArticleController {
   }): Promise<void>;
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```json filename="example/schemas/llm.application.separate.json" showLineNumbers {41-91}
 {
   "model": "claude",
@@ -1110,7 +1110,7 @@ interface BbsArticleController {
   ]
 }
 ```
-  </Tab>
+  </Tabs.Tab>
 </Tabs>
 
 
@@ -1127,7 +1127,7 @@ It's a good feature to hide some internal functions, so that avoiding the LLM fu
     "TypeScript Source Code",
     "Compiled JavaScript File",
   ]}>
-  <Tab>
+  <Tabs.Tab>
 ```typescript filename="example/src/llm.application.hideden.ts" showLineNumbers {25, 38}
 import {
   ClaudeTypeChecker,
@@ -1196,8 +1196,8 @@ interface BbsArticleController {
   }): Promise<void>;
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```javascript filename="example/bin/llm.application.hideden.js" showLineNumbers
 import typia from "typia";
 const app = {
@@ -1372,7 +1372,7 @@ const app = {
 };
 console.log(app);
 ```
-  </Tab>
+  </Tabs.Tab>
 </Tabs>
 
 
@@ -1392,7 +1392,7 @@ If you write any comment on a property, it would fill the `IJsonSchema.descripti
 Let's see how those [type tags](../validators/tags/#type-tags), comment tags and description comments are working with example code.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
-  <Tab>
+  <Tabs.Tab>
 ```typescript copy filename="examples/src/llm-schema.ts" showLineNumbers
 import { IChatGptSchema } from "@samchon/openapi";
 import typia, { tags } from "typia";
@@ -1466,8 +1466,8 @@ interface Special {
   array: Array<string & tags.Format<"uuid">> & tags.MinItems<3>;
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```javascript filename="examples/bin/llm-schema.js" showLineNumbers
 import typia from "typia";
 export const schema = {
@@ -1538,7 +1538,7 @@ export const schema = {
   additionalProperties: false,
 };
 ```
-  </Tab>
+  </Tabs.Tab>
 </Tabs>
 
 
@@ -1550,7 +1550,7 @@ If what you want is not just filling regular properties of LLM schema specificat
 For reference, the custom property must be started with `x-` prefix. It's a rule of LLM schema.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
-  <Tab>
+  <Tabs.Tab>
 ```typescript copy filename="examples/src/llm-schema-custom.ts" copy showLineNumbers {7-9, 13, 17-18}
 import typia, { tags } from "typia";
  
@@ -1574,8 +1574,8 @@ interface IAccount {
  
 typia.llm.schema<IAccount, "chatgpt">();
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```javascript copy filename="examples/bin/llm-schema-custom.js" showLineNumbers {7, 11}
 import typia from "typia";
 ({
@@ -1594,7 +1594,7 @@ import typia from "typia";
   additionalProperties: false,
 });
 ```
-  </Tab>
+  </Tabs.Tab>
 </Tabs>
 
 
@@ -1611,7 +1611,7 @@ About the return value type, it follows the restriction of [`typia.llm.schema<T,
   - [`typia.llm.schema<T, Model>()`](./schema)
 
 <Tabs items={["TypeScript Source Code", "Console Output"]}>
-  <Tab>
+  <Tabs.Tab>
 ```typescript filename="src/examples/llm.application.violation.ts" showLineNumbers
 import { ILlmApplication } from "@samchon/openapi";
 import typia, { tags } from "typia";
@@ -1642,8 +1642,8 @@ interface BbsArticleController {
   erase(id: string & tags.Format<"uuid">): Promise<void>;
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```bash filename="Terminal"
 src/examples/llm.application.violation.ts:4:41 - error TS(typia.llm.application): unsupported type detected    
 
@@ -1665,5 +1665,5 @@ src/examples/llm.application.violation.ts:4:41 - error TS(typia.llm.application)
 
 Found 1 error in src/examples/llm.application.violation.ts:4
 ```
-  </Tab>
+  </Tabs.Tab>
 </Tabs>
