--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -1,16 +1,88 @@
+import { Bleed } from 'nextra-theme-docs'
+
 import HomeLayout from "../src/components/home/HomeLayout";
-import HomeHeroMovie from "../src/movies/home/HomeHeroMovie";
 import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
 
-<HomeLayout>
-  <HomeHeroMovie />
-</HomeLayout>
+
+
+
+## Transformer
+![Typia Logo](/logo.png)
+
+{/* <span style={{ display: "flex", flexDirection: "row" }}>
+{[
+  [
+    "MIT License",
+    "https://img.shields.io/badge/license-MIT-blue.svg",
+    "https://github.com/samchon/typia/blob/master/LICENSE",
+  ],
+  [
+    "NPM Version",
+    "https://img.shields.io/npm/v/typia.svg",
+    "https://www.npmjs.com/package/typia",
+  ],
+  [
+    "NPM Downloads",
+    "https://img.shields.io/npm/dm/typia.svg",
+    "https://www.npmjs.com/package/typia",
+  ],
+  [
+    "Build Status",
+    "https://github.com/samchon/typia/workflows/build/badge.svg",
+    "https://github.com/samchon/typia/actions?query=workflow%3Abuild",
+  ],
+  [
+    "Guide Documents",
+    "https://img.shields.io/badge/guide-documents-forestgreen",
+    "https://typia.io/docs/",
+  ],
+  [
+    "Gurubase",
+    "https://img.shields.io/badge/Gurubase-Ask%20Typia%20Guru-006BFF",
+    "https://gurubase.io/g/typia",
+  ],
+  [
+    "Discord",
+    "https://img.shields.io/badge/discord-samchon-d91965?style=flat&labelColor=5866f2&logo=discord&logoColor=white&link=https://discord.gg/E94XhzrUCZ",
+    "https://discord.gg/E94XhzrUCZ",
+  ]
+].map(([alt, image, url]) => (
+  <a href={url} style={{ marginTop: "30px", marginRight: "6px" }}>
+      <img src={image} alt={alt} />
+  </a>
+))}
+</span> */}
+
+<center>
+[Guide Documents](/docs) · [Playground (Online IDE)](/playground) · [Github Repository](https://github.com/samchon/typia)
+</center>
+
+`typia` is a transformer library converting TypeScript types to runtime function. 
+
+If you call one of the `typia` function, it would be compiled like below. This is the key concept of `typia`, transforming TypeScript type to a runtime function. The `typia.is<T>()` function is transformed to a dedicated type checker by analyzing the target type `T` in the compilation level.
+
+This feature enables developers to ensure type safety in their applications, leveraging TypeScript's static typing while also providing runtime validation. Instead of defining additional schemas, you can simply utilize the pure TypeScript type itself.
+
+```typescript
+//----
+// examples/checkString.ts
+//----
+import typia, { tags } from "typia";
+export const checkString = typia.createIs<string>();
+
+//----
+// examples/checkUUID.js
+//----
+import typia from "typia";
+export const checkString = (() => {
+  return (input) => "string" === typeof input;
+})();
+```
 
 
 
 
 ## Key Features
-
 <HomeLayout>
   <HomeStrengthMovie />
 </HomeLayout>
